# fluxion

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  commitlint.config.js  docker-compose.yml
fluxion-backend/: Dockerfile.resolver  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  schema.graphql
fluxion-backend/alembic/: env.py
fluxion-backend/alembic/versions/: 2bc76b6f39ea_create_seed_tenant_data_procedure.py  7400fe8d7a01_create_tenant_tables_procedure.py
fluxion-backend/infra/: main.tf  outputs.tf  ssm.tf  terraform.tfvars.example  variables.tf
fluxion-backend/infra/modules/api/: datasources.tf  iam.tf  main.tf  outputs.tf  resolvers.tf  variables.tf
fluxion-backend/infra/modules/auth/: main.tf  outputs.tf
fluxion-backend/infra/modules/compute/: main.tf  outputs.tf  variables.tf
fluxion-backend/infra/modules/database/: main.tf  outputs.tf  variables.tf
fluxion-backend/infra/modules/messaging/: main.tf  outputs.tf  variables.tf
fluxion-backend/infra/modules/network/: main.tf  outputs.tf  variables.tf
fluxion-backend/migrations/: alembic.ini  env.py  script.py.mako
fluxion-backend/migrations/versions/: 4768d32c8037_install_tenant_provisioning_procs.py  64066cf559b8_grant_dev_admin_action_upload.py  6bbab220d60c_provision_dev1_tenant.py  7124824094ea_accesscontrol_schema.py  a1b2c3d4e5f6_seed_permission_catalog.py  b9c3d1e2f4a5_seed_dev_admin_permissions.py  cc44f3b5a815_seed_action_upload_permissions.py
fluxion-backend/modules/_template/: Dockerfile  README.md  pyproject.toml
fluxion-backend/modules/_template/src/: auth.py  base_types.py  config.py  const.py  db.py  exceptions.py  handler.py  helpers.py
fluxion-backend/modules/_template/tests/: conftest.py  test_auth.py  test_handler.py
fluxion-backend/modules/action_resolver/: Dockerfile  const.py  pyproject.toml  utils.py
fluxion-backend/modules/action_resolver/src/: auth.py  config.py  const.py  csv_render.py  db.py  exceptions.py  handler.py  permissions.py  s3.py  schema_types.py  sqs.py  utils.py
fluxion-backend/modules/action_resolver/tests/: conftest.py  test_assign_bulk.py  test_csv_render.py  test_db.py  test_handler.py  test_s3.py  test_sqs.py
fluxion-backend/modules/action_trigger/: config.py  exceptions.py
fluxion-backend/modules/action_trigger/src/: config.py  const.py  db.py  exceptions.py  handler.py  utils.py
fluxion-backend/modules/chat_resolver/: config.py  const.py  handler.py  requirements.txt  utils.py
fluxion-backend/modules/checkin_handler/: Dockerfile  config.py  handler.py  requirements.txt
fluxion-backend/modules/checkin_handler/src/: config.py  const.py  db.py  exceptions.py  handler.py  utils.py
fluxion-backend/modules/device_resolver/: Dockerfile  const.py  db.py  handler.py  pyproject.toml  requirements.txt  utils.py
fluxion-backend/modules/device_resolver/src/: auth.py  config.py  const.py  db.py  exceptions.py  handler.py  permissions.py  schema_types.py  utils.py
fluxion-backend/modules/device_resolver/tests/: conftest.py  test_auth.py  test_db.py  test_handler.py
fluxion-backend/modules/platform_resolver/: Dockerfile  const.py  handler.py  pyproject.toml  requirements-dev.txt  utils.py
fluxion-backend/modules/platform_resolver/src/: auth.py  config.py  db.py  exceptions.py  handler.py  permissions.py  schema_types.py  utils.py
fluxion-backend/modules/platform_resolver/tests/: test_db.py  test_handler.py
fluxion-backend/modules/smoketest/: Dockerfile  pyproject.toml
fluxion-backend/modules/smoketest/src/: handler.py
fluxion-backend/modules/smoketest/tests/: test_handler.py
fluxion-backend/modules/upload_processor/: const.py  handler.py
fluxion-backend/modules/upload_processor/src/: config.py  const.py  db.py  exceptions.py  handler.py  utils.py
fluxion-backend/modules/upload_processor/tests/: test_handler.py
fluxion-backend/modules/upload_resolver/: Dockerfile  const.py  handler.py  pyproject.toml  utils.py
fluxion-backend/modules/upload_resolver/src/: auth.py  config.py  const.py  db.py  exceptions.py  handler.py  permissions.py  schema_types.py  sqs.py  utils.py
fluxion-backend/modules/upload_resolver/tests/: conftest.py  test_db.py  test_handler.py  test_sqs.py
fluxion-backend/modules/user_resolver/: Dockerfile  const.py  db.py  exceptions.py  handler.py  pyproject.toml  requirements.txt  utils.py
fluxion-backend/modules/user_resolver/src/: auth.py  cognito.py  config.py  const.py  db.py  exceptions.py  handler.py  permissions.py  schema_types.py  utils.py
fluxion-backend/modules/user_resolver/tests/: test_cognito.py  test_create_user_rollback.py  test_db.py  test_handler.py
fluxion-backend/scripts/: provision-dev-admin.sh  smoke-appsync.sh  verify-migrations.sh
fluxion-backend/terraform/bootstrap/: README.md  main.tf  oidc.tf  outputs.tf  variables.tf
fluxion-backend/terraform/envs/dev/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
fluxion-backend/terraform/modules/api/: README.md  datasources.tf  iam.tf  locals.tf  logging.tf  main.tf  outputs.tf  resolvers.tf  variables.tf
fluxion-backend/terraform/modules/auth/: README.md  main.tf  outputs.tf  variables.tf
fluxion-backend/terraform/modules/database/: README.md  main.tf  outputs.tf  proxy.tf  rds.tf  secret.tf  variables.tf  versions.tf
fluxion-backend/terraform/modules/ecr/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
fluxion-backend/terraform/modules/lambda_function/: README.md  iam.tf  main.tf  outputs.tf  variables.tf
fluxion-backend/terraform/modules/network/: README.md  (+6 more)
fluxion-oem-processor/: Dockerfile.worker  README.md  pyproject.toml
fluxion-oem-processor/apple_process_action/: requirements.txt  utils.py
fluxion-oem-processor/apple_process_action/src/: config.py  const.py  exceptions.py  handler.py
fluxion-oem-processor/infra/: main.tf  outputs.tf  variables.tf
fluxion-oem-processor/modules/_template/: Dockerfile  README.md  pyproject.toml
fluxion-oem-processor/terraform/bootstrap/: README.md  main.tf  variables.tf  versions.tf
(+82 files in other folders)
