[tool.poetry]
name = "fluxion-backend"
version = "0.1.0"
description = "Fluxion MDM — Backend Lambda Resolvers & Workers"
authors = ["Vo Cong Sinh"]
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = {extras = ["all"], version = "*"}
psycopg = {extras = ["binary"], version = "*"}
alembic = "^1.18.4"
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"
moto = {extras = ["all"], version = "*"}
ruff = "*"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Each Lambda module has identically-named files (db.py, handler.py) — run per-module to avoid collisions

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
