[project]
name = "fluxion-oem-processor"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    # Runtime stubs needed for mypy --strict to resolve third-party imports
    # when invoked from the workspace root (single shared .venv).
    "sqlalchemy[mypy]>=2.0",
    "pydantic>=2.9",
    "httpx>=0.27",
    "cryptography>=43",
    "psycopg2-binary>=2.9",
    "aws-lambda-powertools[all]>=3.0",
]

[tool.uv.workspace]
members = ["modules/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # D1xx: Missing docstrings — handler/template stubs are intentionally skeletal
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    # COM812 / ISC001: formatter compatibility
    "COM812",
    "ISC001",
    # TD/FIX: TODO comments — allowed during scaffolding with issue refs
    "TD002",
    "TD003",
    "FIX002",
    # ERA001: commented-out code — config.py has intentional env-var stub placeholders
    "ERA001",
    # N818: exception naming — TenantNotFound is project convention, not Error suffix
    "N818",
    # ANN401: Any in Lambda context parameter — AWS contract, no alternative
    "ANN401",
    # S101: assert in tests — pytest convention
    "S101",
    # EM101/EM102/TRY003: error message style — short messages are readable inline here
    "EM101",
    "EM102",
    "TRY003",
    # TC002: TYPE_CHECKING blocks — SQLAlchemy types used at runtime, not annotation-only
    "TC002",
    # D107: __init__ docstring — class-level docstring covers it
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
# src/ is not on the default path when running from workspace root;
# MYPYPATH=modules/_template/src resolves local imports at check time.
# Third-party stubs require the module's venv: use `cd modules/_template && uv run mypy`.
mypy_path = "modules/_template/src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
