[project]
name = "lambda-template"
version = "0.1.0"
requires-python = ">=3.12"
# Runtime deps for every Lambda resolver/worker.
# Copy this list when scaffolding a new Lambda from this template.
# psycopg3 (psycopg[binary]) replaces psycopg2-binary; no SQLAlchemy.
dependencies = [
    "psycopg[binary]>=3.1,<4",
    "pydantic>=2.6",
    "aws-lambda-powertools>=2.30",
]

[tool.pytest.ini_options]
# Mirror the Lambda runtime: src/ contents are copied flat into LAMBDA_TASK_ROOT.
# Tests import the same way: `from config import logger` (no `src.` prefix).
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Coverage threshold is not enforced on the _template skeleton — db.py and
# auth.py are stubs until a real Lambda is scaffolded.
# Real Lambda modules set --cov-fail-under=80 here.
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
