[project]
name = "oem-worker-template"
version = "0.1.0"
requires-python = ">=3.12"
# Runtime deps for OEM workers. Add vendor-specific extras (e.g. aioboto3) as needed.
dependencies = [
    "pydantic>=2.9",
    "aws-lambda-powertools[all]>=3.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",       # APNS HTTP/2 transport
    "cryptography>=43",  # APNS JWT signing (ES256)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "sqlalchemy[mypy]>=2.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
